--- a/frontend/src/app/employees/add-edit/add-edit.component.html
+++ b/frontend/src/app/employees/add-edit/add-edit.component.html
@@ -4,11 +4,13 @@
     <div class="alert alert-danger" *ngIf="errorMessage">{{errorMessage}}</div>
     <div class="mb-3">
       <label class="form-label">Employee ID</label>
-      <input type="text" class="form-control" [formControl]="f.employeeId" [ngClass]="{ 'is-invalid': submitted && f.employeeId.errors }" [disabled]="!!id">
+      <input type="text" class="form-control" [formControl]="f.employeeId" [ngClass]="{ 'is-invalid': submitted && f.employeeId.errors }" readonly>
+      <small *ngIf="!id" class="form-text text-muted">Employee ID will be auto-generated</small>
     </div>
     <div class="mb-3">
       <label class="form-label">User</label>
       <select class="form-select" [formControl]="f.userId" [ngClass]="{ 'is-invalid': submitted && f.userId.errors }">
+        <option value="">-- Select User --</option>
         <option *ngFor="let user of users" [value]="user.id">{{user.email}} ({{user.role}})</option>
       </select>
     </div>
@@ -19,6 +21,7 @@
     <div class="mb-3">
       <label class="form-label">Department</label>
       <select class="form-select" [formControl]="f.departmentId" [ngClass]="{ 'is-invalid': submitted && f.departmentId.errors }">
+        <option value="">-- Select Department --</option>
         <option *ngFor="let dept of departments" [value]="dept.id">{{dept.name}}</option>
       </select>
     </div>
