--- a/frontend/src/app/account/layout.component.html
+++ b/frontend/src/app/account/layout.component.html
@@ -1,13 +1,12 @@
-<div class="container-fluid bg-dark min-vh-100 d-flex align-items-center justify-content-center py-5">
-    <div class="row justify-content-center w-100">
-        <div class="col-md-6 col-lg-5">
-            <router-outlet></router-outlet>
+<div class="account-container text-light min-vh-100 d-flex align-items-center py-5">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-md-8">
+                <router-outlet></router-outlet>
+            </div>
         </div>
     </div>
 </div>
 
 <style>
-    body {
-        background-color: #212529;
-    }
 </style>
