--- a/frontend/src/app/admin/employees/list.component.html
+++ b/frontend/src/app/admin/employees/list.component.html
@@ -1,8 +1,8 @@
 <div class="card">
-    <div class="card-header">EMPLOYEES</div>
+    <div class="card-header bg-dark text-white">EMPLOYEES</div>
     <div class="card-body">
         <div *ngIf="loading" class="text-center p-3">
-            <div class="spinner-border spinner-border-sm"></div>
+            <div class="spinner-border spinner-border-sm text-primary"></div>
             <span class="ms-2">Loading employees...</span>
         </div>
         
@@ -12,7 +12,7 @@
         </div>
         
         <div *ngIf="!loading && employees.length > 0">
-            <table class="table table-striped">
+            <table class="table table-dark table-striped">
                 <thead>
                     <tr>
                         <th>Employee ID</th>
