--- a/frontend/src/app/admin/subnav.component.html
+++ b/frontend/src/app/admin/subnav.component.html
@@ -6,16 +6,16 @@
         <div class="collapse navbar-collapse" id="adminNavbarNav">
             <div class="navbar-nav">
                 <a routerLink="accounts" routerLinkActive="active" class="nav-item nav-link px-3">
-                    <i class="fas fa-users me-1"></i> Accounts
+                     Accounts
                 </a>
                 <a routerLink="employees" routerLinkActive="active" class="nav-item nav-link px-3">
-                    <i class="fas fa-user-tie me-1"></i> Employees
+                    Employees
                 </a>
                 <a routerLink="departments" routerLinkActive="active" class="nav-item nav-link px-3">
-                    <i class="fas fa-building me-1"></i> Departments
+                     Departments
                 </a>
                 <a routerLink="requests" routerLinkActive="active" class="nav-item nav-link px-3">
-                    <i class="fas fa-clipboard-list me-1"></i> Requests
+                   Requests
                 </a>
             </div>
         </div>
